新建 文本文档.txt
D:\game\kongbu\Source\kongbu\Private\PickupActorAAARuneDisableCard.cpp(89,70): error C2440: “=”: 无法从“UCapsuleComponent *”转换为“UPrimitiveComponent *”
        AttachComponent = GhostCharacter->GetGhostAttachZoneComponent();
                                                                     ^
D:\game\kongbu\Source\kongbu\Private\PickupActorAAARuneDisableCard.cpp(89,70): note: 指向的类型不相关; 转换需要 reinterpret_cast、C 样式强制转换或带圆括号的函数样式强制转换
[9/13] Compile [x64] Module.kongbu.6.cpp
[10/13] Compile [x64] Module.kongbu.7.cpp
Trace written to file C:/Users/mwh/AppData/Local/UnrealBuildTool/Log.uba with size 22.7kb
Total time in Unreal Build Accelerator local executor: 211.96 seconds

Result: Failed (OtherCompilationError)
Total execution time: 223.69 seconds